--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,10 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongoose": "^8.13.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -32,6 +32,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.14.1",
     "@types/passport": "^1.0.17",
